fix bug where boxes & hover not showing up properly

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -67,6 +67,10 @@ article {
   padding-right: 3px;
 }
 
+article.tweet {
+  margin-top: 3px;
+}
+
 header.tweet {
   display: flex;
   justify-content: space-between;
